--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^8.191.0"
   }
 }
