finish footer component, complete homepage

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nammi-clothing",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
@@ -18,5 +17,6 @@
     "nodemon": "^2.0.15",
     "react-stripe-checkout": "^2.6.3",
     "stripe": "^8.191.0"
-  }
+  },
+  "description": ""
 }
