hosted to heroku both front and back end

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,9 @@
 {
   "name": "nammi-clothing",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.18.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
